# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.651 2006/07/26 22:38:45 wolf31o2 Exp $

  26 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix my sed line so it actually applies correctly.

  25 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Added check for verbose, and add --verbose if found, or --quiet, to emerge
  options.

  21 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix the splash code so we have our splash theme on all 6 virtual consoles,
  as well as a possible fix for the read-only filesystem messages from
  /sbin/splash-functions.sh

  20 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Fix --fetchonly to actually work.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Added description for livecd/fsops to livecd-stage2's spec template.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  I've modified the GDM configuration section to work correctly. I have also
  ensured that xdm is no longer started just because livecd/xdm is used, which
  was causing issues for the generic-livecd type. This is 2.0_rc50, which
  should be the last of the 'release candidates' made. If there are no bug
  reports in 2 days, then I'm rolling this as 2.0 final.

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Hopefully, I have fixed the issue with the Installer icons. We'll have to
  see once the newer Installer is released, as I still have to fix the
  installer scripts.

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Removed famd from the default runlevel for gentoo-release-livecd. It really