@@ -1,5 +1,12 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.651 2006/07/26 22:38:45 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.652 2006/07/29 18:35:06 wolf31o2 Exp $
+
+  29 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/support/livecdfs-update.sh:
+  Remove sed from splash section, since it wasn't actually resolving the
+  issue, anyway. Change the installer's dialog front-end code to simply run
+  via sudo, since we don't need to worry about having the X DISPLAY setup or
+  anything. This is catalyst 2.0, so you guys can all start rejoicing.
 
   26 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/livecdfs-update.sh:
